update portfolio website

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-6">
                         <h1>🚀 Hey there, Reader!</h1>
-                        <p>I am currently a Software Engineer at March Networks and I am passionate about Cloud Solutions and Agile Development
+                        <p>I'm a Software Engineer at March Networks, with an educational background from Carleton University, where I earned my degree in Software Engineering with distinction. My professional path is marked by a series of progressive roles where I've developed expertise in Node.js, cloud platforms, and microservice architecture.
                         </p>
                     </div>
                     <div class="col-lg-6 text-center">
@@ -105,12 +105,27 @@
                 </div>
             </div>
         </section>
-        <section id="kinaxis">
+        <section id="marchnetworks">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
-                        <h1>Winter/Summer 2021</h1>
-                        <p>I am currently working at Kinaxis as a Software Developer Intern
+                        <!-- <h1>2021 - Present</h1> -->
+                        <p>I am currently working at March Networks as a Software Designer
+                            creating and maintaining cloud applications
+                        </p>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <img src="./img/index/marchnetworks_logo.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="previously">
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <h1>Previously</h1>
+                        <p>I worked at Kinaxis as a Software Developer Intern
                             with the Product Verification DevOps team
                         </p>
                     </div>
@@ -119,8 +134,36 @@
                     </div>
                 </div>
             </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <!-- <h1>Summer 2020</h1> -->
+                        <p>I worked at National Research Council as a Web Developer Intern under the
+                            <a
+                                href="https://nrc.canada.ca/en/research-development/research-collaboration/programs/high-performance-buildings-program">high-performance
+                                buildings</a> program.
+                        </p>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <img src="./img/index/nrc.svg" alt="">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <!-- <h1>Fall/Winter 2020</h1> -->
+                        <p>Being a Teaching Assistant at Carleton University, I have helped students understand and
+                            master basic object oriented programming
+                            (Java) and designing concepts.</p>
+                    </div>
+                    <div class="col-lg-6 text-center">
+                        <img src="./img/index/sce.svg" alt="">
+                    </div>
+                </div>
+            </div>
         </section>
-        <section id="nrc">
+        <!-- <section id="nrc">
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-lg-6">
@@ -151,7 +194,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </section>
 
     <section id="projects" class="container">
@@ -159,28 +202,28 @@
         <div class="row justify-content-center pb-4">
 
             <div class="col-lg-6 col-sm-12 project-card">
-                <p class="text-muted">February 2020</p>
+                <!-- <p class="text-muted">February 2020</p> -->
                 <div class="d-flex"><h4 class="">Jagt-Move</h4><small><a href="https://devpost.com/software/jagt-move"><i class="fas fa-external-link-alt ml-2"></i></a></small></div>
                 <p class="text-muted">NodeJS, MongoDB, React, Tenserflow</p>
                 <p class="">uOttaHack 2020 hackathon project. A health application with a NodeJS backend,
                     and utilizing TensorFlow Lite Posenet model</p>
             </div>
             <div class="col-lg-6 col-sm-12 project-card">
-                <p class="text-muted">May-Aug 2019</p>
+                <!-- <p class="text-muted">May-Aug 2019</p> -->
                 <h4 class="">Loan Management App</h4>
                 <p class="text-muted">NodeJs, Express, HTML, CSS, Bootstrap</p>
                 <p class="">Created a loan management web application capable of managing
                     customers, generating loan and transaction report for a client company in Oshawa, ON</p>
             </div>
             <div class="col-lg-6 col-sm-12 project-card">
-                <p class="text-muted">December 2019</p>
+                <!-- <p class="text-muted">December 2019</p> -->
                 <h4 class="">Tic-Tac-Toe</h4>
                 <p class="text-muted">Java, Swing</p>
                 <p class="">Designed a Tic-Tac-Toe game using two dimensions’ grid array and
                     Java’s Swing framework using Object Oriented Programming principles</p>
             </div>
             <div class="col-lg-6 col-sm-12 project-card">
-                <p class="text-muted">May 2020</p>
+                <!-- <p class="text-muted">May 2020</p> -->
                 <div class="d-flex"><h4 class="">CryptoTracker</h4><small><a href="./d3-line-chart/index.html"><i class="fas fa-external-link-alt ml-2"></i></a></small></div>
                 <p class="text-muted">D3.js, Javascript</p>
                 <p class="">Developed a web page to visualize statistics of different cryptocurrency over past 10 years using D3.js and jQuery</p>
@@ -199,7 +242,7 @@
             <div id="ieee" class="row align-items-center">
                 <div class="col-lg-6">
                     <h3>IEEE Ottawa Section</h3>
-                    <p>Served as Publications Comittee Chair in 2020 and now serving as Newsletter Editor</p>
+                    <p>Served as Publications Comittee Chair and also as Newsletter Editor</p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <img src="./img/index/header_os_new.png" alt="">
@@ -209,7 +252,7 @@
             <div id="cuhacking" class="row align-items-center">
                 <div class="col-lg-6">
                     <h3>Web Developer</h3>
-                    <p>Created live website for cuHacking 2020. Assisted in hacker application and more.</p>
+                    <p>Created live website for cuHacking. Assisted in hacker application and more.</p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <img src="./img/index/cuhacking.svg" alt="">
@@ -220,7 +263,7 @@
                 <div class="col-lg-6">
                     <h3>Consulting Director</h3>
                     <p>Directed consulting competition at
-                        Carleton Engineering Competetion C-ENG-C 2019.
+                        Carleton Engineering Competetion C-ENG-C.
                     </p>
                 </div>
                 <div class="col-lg-6 text-center">
@@ -261,7 +304,7 @@
                 <h1 class="mt-4 mb-4 title"><i class="fas fa-link"></i> Let's Connect</h1>
             </div>
             <div class="container m-4 p-4">
-            <a href="./Resume_Tejash_Fall.pdf" class="m-3">
+            <a href="./Tejash_Resume.pdf" class="m-3">
                 <i class="far fa-file"></i> <span class="network-name">Resume</span>
             </a>
             <a href="https://www.linkedin.com/in/tejash-patel-3402" class="m-3">
@@ -295,7 +338,7 @@
                     <p>made with love <i class="fab fa-gratipay"></i></p>
                 </div>
                 <div class="col-8 text-right">
-                    <p>Copyright 2021 © Tejash Patel</p class="justify-content-center">
+                    <p>Copyright 2024 © Tejash Patel</p class="justify-content-center">
 
                 </div>
             </div>
