--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 <h1 class="mt-4 mb-4 title"><i class="fas fa-link"></i> Let's Connect</h1>
             </div>
             <div class="container m-4 p-4">
-            <a href="./Tejash_Resume.pdf" class="m-3">
+            <a href="./Resume_Tejash.pdf" class="m-3">
                 <i class="far fa-file"></i> <span class="network-name">Resume</span>
             </a>
             <a href="https://www.linkedin.com/in/tejash-patel-3402" class="m-3">
